remove bandwidth api
