# pkg/apispec/oas_request_encoders_gen.go
@@ -24,20 +24,6 @@ func encodeAPIKeysPostRequest(
 	return nil
 }
 
-func encodeAPIV1SandboxesIDBandwidthPatchRequest(
-	req *BandwidthPolicySpec,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	e := new(jx.Encoder)
-	{
-		req.Encode(e)
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
-
 func encodeAPIV1SandboxesIDContextsCtxIDExecPostRequest(
 	req *ContextInputRequest,
 	r *http.Request,
